# SDLshooter

./: .gitignore  CMakeLists.txt  README.md  resources.rc
src/: Game.cpp  Game.h  Object.h  ObjectPool.h  PlayerProjPool.h  Scene.cpp  Scene.h  SceneEnd.cpp  SceneEnd.h  SceneMain.cpp  SceneMain.h  SceneTitle.cpp  SceneTitle.h  main.cpp
